crates/taudit-cli/tests/snapshots/snapshot_gha__gha_clean_all_findings.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: findings
---
- severity: medium
  category: authority_propagation
  path:
    source: 0
    sink: 1
    edges:
      - 0
    crossed_boundary: true
    boundary_crossing:
      - first_party
      - third_party
  nodes_involved:
    - 0
    - 1
  message: GITHUB_TOKEN propagated to actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 across trust boundary
  recommendation:
    type: manual
    action: "Narrow the provider-native scope of GITHUB_TOKEN so it no longer reaches the flagged sink: tighten the job/workflow `permissions:` block and SHA-pin any untrusted sink action. GITHUB_TOKEN is an ephemeral platform token, so an external secret runtime cannot scope it."
  source: built-in
  confidence_scope: yaml_only
  authority_kinds:
    - job_token
