crates/taudit-cli/tests/snapshots/snapshot_gha__gha_clean_json_report.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: json
---
findings:
  - authority_kinds:
      - job_token
    category: authority_propagation
    confidence_scope: yaml_only
    finding_group_id: c809b2b3-8d1a-5920-9c46-fe83a145af30
    fingerprint: 8886f49a913cabcd4c4a96856247ec35
    message: GITHUB_TOKEN propagated to actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 across trust boundary
    nodes_involved:
      - 0
      - 1
    path:
      boundary_crossing:
        - first_party
        - third_party
      crossed_boundary: true
      edges:
        - 0
      sink: 1
      source: 0
    recommendation:
      action: "Narrow the provider-native scope of GITHUB_TOKEN so it no longer reaches the flagged sink: tighten the job/workflow `permissions:` block and SHA-pin any untrusted sink action. GITHUB_TOKEN is an ephemeral platform token, so an external secret runtime cannot scope it."
      type: manual
    rule_id: authority_propagation
    severity: medium
    source: built-in
    suppression_key: sk1_33915b7ba286d7f88c0d210a9772364c
graph:
  completeness: complete
  edges:
    - from: 2
      id: 0
      kind: uses_image
      to: 1
    - authority_summary:
        identity_scope: constrained
        permissions_summary: "{ contents: read }"
        trust_zone: first_party
      from: 2
      id: 1
      kind: has_access_to
      to: 0
    - authority_summary:
        identity_scope: constrained
        permissions_summary: "{ contents: read }"
        trust_zone: first_party
      from: 3
      id: 2
      kind: has_access_to
      to: 0
  metadata:
    platform: github-actions
    trigger: push
    triggers: push
  nodes:
    - id: 0
      kind: identity
      metadata:
        identity_scope: constrained
        permissions: "{ contents: read }"
      name: GITHUB_TOKEN
      trust_zone: first_party
    - id: 1
      kind: image
      metadata:
        digest: a5ac7e51b41094c92402da3b24376905380afc29
      name: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29
      trust_zone: third_party
    - id: 2
      kind: step
      metadata:
        checkout_self: "true"
        gha_action: actions/checkout
        gha_runs_on: ubuntu-latest
        job_name: test
      name: "test[0]"
      trust_zone: third_party
    - id: 3
      kind: step
      metadata:
        gha_runs_on: ubuntu-latest
        job_name: test
        script_body: cargo test
      name: Run tests
      trust_zone: first_party
  source:
    file: test.yml
schema_uri: "https://taudit.dev/schemas/taudit-report.schema.json"
schema_version: 1.0.0
summary:
  completeness: complete
  critical: 0
  graph_risk_summary:
    authority_roots: 1
    delegation_hops: 0
    mutable_refs: 0
    protected_resource_categories:
      - identity
    publication_adjacent_sinks: 0
    untrusted_sinks: 0
  high: 0
  info: 0
  low: 0
  medium: 1
  total_edges: 3
  total_findings: 1
  total_nodes: 4
