crates/taudit-cli/tests/snapshots/snapshot_gha__gha_clean_sarif_results.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: results
---
- level: warning
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: GITHUB_TOKEN propagated to actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 across trust boundary
  partialFingerprints:
    primaryLocationLineHash: 2c001aeeb933afb192cc1af87babdff9
    taudit/v1: 2c001aeeb933afb192cc1af87babdff9
  properties:
    authorityKinds:
      - job_token
    confidenceScope: yaml_only
    findingGroupId: 58af3d8a-8e02-5d29-8a35-013ac5b8ddc2
    security-severity: "5.0"
    taudit-source: built-in
  ruleId: authority_propagation
