crates/taudit-cli/tests/snapshots/snapshot_gha__gha_over_privileged_all_findings.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: findings
---
- severity: critical
  category: authority_propagation
  path:
    source: 9
    sink: 7
    edges:
      - 6
    crossed_boundary: true
    boundary_crossing:
      - first_party
      - untrusted
  nodes_involved:
    - 9
    - 7
  message: DEPLOY_TOKEN propagated to some-org/deploy-action@main across trust boundary
  recommendation:
    type: tsafe_remediation
    command: tsafe exec --ns <scoped-namespace> -- <command>
    explanation: "Scope DEPLOY_TOKEN to only the step that needs it — bind it via the step's `env:` block or a scoped secret runtime instead of exposing it to every downstream step."
  source: built-in
  confidence_scope: yaml_only
  authority_kinds:
    - credential_named_variable
- severity: critical
  category: authority_propagation
  path:
    source: 0
    sink: 1
    edges:
      - 0
    crossed_boundary: true
    boundary_crossing:
      - first_party
      - untrusted
  nodes_involved:
    - 0
    - 1
    - 7
  message: "GITHUB_TOKEN reaches 2 sinks via authority propagation: [actions/checkout@v4, some-org/deploy-action@main]"
  recommendation:
    type: manual
    action: "Narrow the provider-native scope of GITHUB_TOKEN so it no longer reaches the flagged sink: tighten the job/workflow `permissions:` block and SHA-pin any untrusted sink action. GITHUB_TOKEN is an ephemeral platform token, so an external secret runtime cannot scope it."
  source: built-in
  confidence_scope: yaml_only
  authority_kinds:
    - oidc_identity
- severity: low
  category: long_lived_credential
  nodes_involved:
    - 4
  message: "'AWS_ACCESS_KEY_ID' looks like a long-lived static credential"
  recommendation:
    type: federate_identity
    static_secret: AWS_ACCESS_KEY_ID
    oidc_provider: "GitHub Actions OIDC (id-token: write)"
  source: built-in
  time_to_fix: large
  confidence_scope: yaml_only
  authority_kinds:
    - credential_named_variable
- severity: low
  category: long_lived_credential
  nodes_involved:
    - 5
  message: "'AWS_SECRET_ACCESS_KEY' looks like a long-lived static credential"
  recommendation:
    type: federate_identity
    static_secret: AWS_SECRET_ACCESS_KEY
    oidc_provider: "GitHub Actions OIDC (id-token: write)"
  source: built-in
  time_to_fix: large
  confidence_scope: yaml_only
  authority_kinds:
    - credential_named_variable
- severity: high
  category: over_privileged_identity
  nodes_involved:
    - 0
    - 2
    - 3
    - 8
  message: "GITHUB_TOKEN has broad scope (permissions: 'write-all') — likely broader than needed"
  recommendation:
    type: reduce_permissions
    current: write-all
    minimum: "{ contents: read }"
  source: built-in
  time_to_fix: small
  confidence_scope: yaml_only
  authority_kinds:
    - oidc_identity
- severity: medium
  category: unpinned_action
  nodes_involved:
    - 1
  message: "[action_major_version_pin_without_sha] actions/checkout@v4 is pinned only to a mutable major tag; pin to a full commit SHA"
  recommendation:
    type: pin_action
    current: actions/checkout@v4
    pinned: actions/checkout@<40-char-sha>
  source: built-in
  time_to_fix: trivial
  confidence_scope: yaml_only
  runtime_preconditions:
    - "the referenced mutable branch, tag, include, or image can change independently of this repository"
  attacker_surface_kinds:
    - mutable_dependency_ref
- severity: medium
  category: unpinned_action
  nodes_involved:
    - 1
  message: actions/checkout@v4 is not pinned to a SHA digest
  recommendation:
    type: pin_action
    current: actions/checkout@v4
    pinned: actions/checkout@<sha256-digest>
  source: built-in
  time_to_fix: trivial
  confidence_scope: yaml_only
  runtime_preconditions:
    - "the referenced mutable branch, tag, include, or image can change independently of this repository"
  attacker_surface_kinds:
    - mutable_dependency_ref
- severity: high
  category: unpinned_action
  nodes_involved:
    - 7
  message: some-org/deploy-action@main is not pinned to a SHA digest
  recommendation:
    type: pin_action
    current: some-org/deploy-action@main
    pinned: some-org/deploy-action@<sha256-digest>
  source: built-in
  time_to_fix: trivial
  confidence_scope: yaml_only
  runtime_preconditions:
    - "the referenced mutable branch, tag, include, or image can change independently of this repository"
  attacker_surface_kinds:
    - mutable_dependency_ref
- severity: critical
  category: untrusted_with_authority
  nodes_involved:
    - 2
    - 0
  message: "Untrusted step 'build[0]' has direct access to identity 'GITHUB_TOKEN'"
  recommendation:
    type: reduce_permissions
    current: write-all
    minimum: minimal required scope
  source: built-in
  confidence_scope: yaml_only
  authority_kinds:
    - oidc_identity
  attacker_surface_kinds:
    - untrusted_checkout
    - untrusted_step
- severity: critical
  category: untrusted_with_authority
  nodes_involved:
    - 8
    - 0
  message: "Untrusted step 'deploy[0]' has direct access to identity 'GITHUB_TOKEN'"
  recommendation:
    type: reduce_permissions
    current: write-all
    minimum: minimal required scope
  source: built-in
  confidence_scope: yaml_only
  authority_kinds:
    - oidc_identity
  attacker_surface_kinds:
    - untrusted_step
- severity: critical
  category: untrusted_with_authority
  nodes_involved:
    - 8
    - 9
  message: "Untrusted step 'deploy[0]' has direct access to secret 'DEPLOY_TOKEN'"
  recommendation:
    type: cellos_remediation
    reason: "Untrusted step 'deploy[0]' has direct access to secret 'DEPLOY_TOKEN'"
    spec_hint: "cellos run --network deny-all --broker env:DEPLOY_TOKEN"
  source: built-in
  confidence_scope: yaml_only
  authority_kinds:
    - credential_named_variable
  attacker_surface_kinds:
    - untrusted_step
- severity: info
  category: uplift_without_attestation
  nodes_involved:
    - 2
    - 3
    - 8
    - 0
  message: 3 step(s) use OIDC/federated identity but no provenance attestation step was detected — artifact integrity cannot be verified
  recommendation:
    type: manual
    action: "Add 'actions/attest-build-provenance' after your build step (GHA) to provide SLSA provenance. See https://docs.github.com/en/actions/security-guides/using-artifact-attestations"
  source: built-in
  confidence_scope: yaml_only
  runtime_preconditions:
    - downstream identity provider accepts the issued OIDC token
    - the configured audience or cloud role grants useful authority
  authority_kinds:
    - oidc_identity
  attacker_surface_kinds:
    - script_sink
    - untrusted_checkout
    - untrusted_step
