crates/taudit-cli/tests/snapshots/snapshot_gha__gha_over_privileged_finding_1.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: finding
---
severity: critical
category: authority_propagation
path:
  source: 0
  sink: 1
  edges:
    - 0
  crossed_boundary: true
  boundary_crossing:
    - first_party
    - untrusted
nodes_involved:
  - 0
  - 1
  - 7
message: "GITHUB_TOKEN reaches 2 sinks via authority propagation: [actions/checkout@v4, some-org/deploy-action@main]"
recommendation:
  type: manual
  action: "Narrow the provider-native scope of GITHUB_TOKEN so it no longer reaches the flagged sink: tighten the job/workflow `permissions:` block and SHA-pin any untrusted sink action. GITHUB_TOKEN is an ephemeral platform token, so an external secret runtime cannot scope it."
source: built-in
confidence_scope: yaml_only
authority_kinds:
  - oidc_identity
