crates/taudit-cli/tests/snapshots/snapshot_gha__gha_over_privileged_finding_3.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: finding
---
severity: low
category: long_lived_credential
nodes_involved:
  - 5
message: "'AWS_SECRET_ACCESS_KEY' looks like a long-lived static credential"
recommendation:
  type: federate_identity
  static_secret: AWS_SECRET_ACCESS_KEY
  oidc_provider: "GitHub Actions OIDC (id-token: write)"
source: built-in
time_to_fix: large
confidence_scope: yaml_only
authority_kinds:
  - credential_named_variable
