crates/taudit-cli/tests/snapshots/snapshot_gha__gha_over_privileged_finding_4.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: finding
---
severity: high
category: over_privileged_identity
nodes_involved:
  - 0
  - 2
  - 3
  - 8
message: "GITHUB_TOKEN has broad scope (permissions: 'write-all') — likely broader than needed"
recommendation:
  type: reduce_permissions
  current: write-all
  minimum: "{ contents: read }"
source: built-in
time_to_fix: small
